prevent scrollbar in searching div by adding overflow-y: hidden

--- a/bundles/catalogue/metadatacatalogue/scss/style.scss
+++ b/bundles/catalogue/metadatacatalogue/scss/style.scss
@@ -9,6 +9,10 @@ div.metadataCatalogueContainer {
     div.main {
         width: 100%;
         height: 100%;
+        
+        div.metadataSearching {
+            overflow-y: hidden;
+        }
     }
 
     div.moreLess {
